# servel

./: .gitignore  LICENSE  README.md  package-lock.json  package.json  tsconfig.json  vite.config.ts
.github/ISSUE_TEMPLATE/: bug-report.yml  config.yml  feature-request.yml
.github/workflows/: build.yml  release.yml
assets/services/: services.json
docs/reports/impl/: m5-logs-viewer-frontend.md
src/: App.vue  main.ts
src-tauri/: .gitignore  Cargo.toml  tauri.conf.json
src-tauri/icons/: icon.icns
src-tauri/installer/: wslconfig-hook.nsh
src-tauri/src/: lib.rs  main.rs  tray.rs  watcher.rs
src-tauri/src/commands/: compose.rs  config.rs  mod.rs  node.rs  php.rs  prereq.rs  services.rs  stats.rs  util.rs
src/assets/styles/: base.css  tokens.css
src/components/: LogTail.vue  PrereqCard.vue  ServiceRow.vue  SettingRow.vue  StatusBar.vue  VersionPicker.vue
src/components/ui/: SkeletonBox.vue
src/composables/: useAutoStart.ts  useConfig.ts  useDockerStatus.ts  useLogCopy.ts  useLogs.ts  useNode.ts  usePhp.ts  usePhpHookStatus.ts  usePrereq.ts  useProjectWatch.ts  useServices.ts  useTauri.ts  useUptime.ts
src/types/: navigation.ts  prereq.ts  service.ts  version.ts  watcher.ts
src/views/: Dashboard.vue  Logs.vue  LogsViewer.vue  Onboarding.vue  Settings.vue
